app/src/parser/transactions/pvm/banff/snapshots/rslib__parser__transactions__pvm__banff__add_permissionless_validator__tests__ui_permissionless_validator.snap
---
source: app/src/parser/transactions/pvm/banff/add_permissionless_validator.rs
expression: reduced
---
[
    "AddPermlessValida": "Transaction",
    "Validator": "NodeID-9ig1HmgE4hECbPAugbAbb283e9PdGeji5",
    "Start time": "2022-12-12 17:14:22 UTC",
    "End time": "2023-01-11 17:14:22 UTC",
    "Total stake(AVAX)": "2000",
    "Signer": "0xa5af179e4188583893c2b99e1a8be27d90a9213cfbff1d75b74fe2bc9f3b072c2ded0863a9d9acd9033f223295810e42",
    "Stake": "2000 AVAX to ",
    "Address": "local1x0h0l3j8sh8emq88wvwe7v0k00grch8sh4entf",
    "Valida rewards to": "local1wte7hxh2lq5rqywwdephlhkdvh4var6jtuu57r",
    "Delega rewards to": "local1k2u3xyavfp7zyfz9y48zdngzd5sldazqgzn2ht",
    "Delegate fee(%)": "2",
    "Fee(AVAX)": "0",
]
